--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
     <h1>Welcome to Dummy Salesforce api.</h1>
+    <p>We have some secret information at <a href="/about">/about</a></p>
     <a href="/login"><button>Login</button></a>
     </body>
 </html>
